k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: project-management
spec:
  selector:
    app: project-management
  ports:
  - name: http
    port: 3000
    targetPort: 3000
