k8s/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: project-management
  namespace: project-management
spec:
  parentRefs:
  - name: project-management
  rules:
  - backendRefs:
    - name: app
      port: 3000
